* 부트스트랩 적용

--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Petit Note</title>
+    <link rel="stylesheet" href="C:\study\my-petit-note\css\main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <h3>Notes</h3>
 
-    <div id="notesContainer"></div>
-    <button id="addBtn">Add</button>
+    <div class="main-content">
+        <h3 class="fw-bold main-title">Notes</h3>
+
+        <div id="notesContainer" class="form-group"></div>
+        <div class="button-group">
+            <button id="addBtn" class="btn btn-primary">Add</button>
+        </div>
+    </div>
 
     <script>
         const addBtn = document.getElementById("addBtn");
@@ -23,27 +30,34 @@
         } else {
             let x = notes.length;
             for (let i = 0; i < x; i++) {
-                const div = document.createElement("div");
+                const outerDiv = document.createElement("div");
+                const innerDiv = document.createElement("div");
                 const h4 = document.createElement("h4");
                 const p = document.createElement("p");
 
-                div.addEventListener("mouseenter", function () {
-                    div.style.cursor = "pointer";
+
+                outerDiv.setAttribute("class", "card");
+                outerDiv.addEventListener("mouseenter", function () {
+                    outerDiv.style.cursor = "pointer";
                 });
 
-                div.addEventListener("click", function () {
+                outerDiv.addEventListener("click", function () {
                     // 선택한 노트 정보를 브라우저 로컬 스토리지에 저장한다.
                     localStorage.setItem("selectedNote", i);
                     window.location.href = "detail.html";
                 });
 
+                innerDiv.setAttribute("class", "card-body");
+                h4.setAttribute("class", "fs-5 fw-semibold");
+                p.setAttribute("class", "fs-6");
                 h4.innerText = notes[i].title;
                 p.innerText = notes[i].content;
 
                 // div > h4 , p
-                notesContainer.appendChild(div);
-                div.appendChild(h4);
-                div.appendChild(p);
+                notesContainer.appendChild(outerDiv);
+                outerDiv.appendChild(innerDiv);
+                innerDiv.appendChild(h4);
+                innerDiv.appendChild(p);
             }
         }
 
