--- a/html/detail.html
+++ b/html/detail.html
@@ -6,22 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Petit Note</title>
     <link rel="stylesheet" href="C:\study\my-petit-note\css\main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <div>
-        <h3>New note</h3>
+    <div class="main-content">
+        <h3 class="fw-bold main-title">New note</h3>
         <form>
             <div class="form-group">
-                <label class="label" for="title">Title</label>
-                <input class="input" type="text" id="title" maxlength="30" required>
-                <label class="label" for="content">Content</label>
-                <input class="input" type="text" id="content" required>
+                <label class="label form-label" for="title">Title</label>
+                <input class="input form-control form-control" type="text" id="title" maxlength="30" required>
+                <label class="label form-label" for="content">Content</label>
+                <input class="input form-control form-control" type="text" id="content" required>
             </div>
-            <button id="editBtn" type="submit">Save</button>
-            <button id="deleteBtn" type="submit">Delete</button>
+            <div class="button-group">
+                <button id="editBtn" type="submit" class="btn btn-primary">Save</button>
+                <button id="deleteBtn" type="submit" class="btn btn-danger">Delete</button>
+            </div>
         </form>
-        <button id="backBtn">Back</button>
+        <div class="button-group">
+            <button id="backBtn" class="btn btn-secondary">Back</button>
+        </div>
     </div>
     <script>
         const titleInput = document.getElementById("title");
@@ -43,7 +48,7 @@
             window.location.href = "index.html";
         });
 
-        editBtn.addEventListener("click", function() {
+        editBtn.addEventListener("click", function () {
             const note = {
                 title: titleInput.value,
                 content: contentInput.value
@@ -56,7 +61,7 @@
         });
 
         // Delete 버튼 클릭 이벤트
-        deleteBtn.addEventListener("click", function(e) {
+        deleteBtn.addEventListener("click", function (e) {
             e.preventDefault(); // 기본 폼 제출 동작 방지
             const isConfirmed = confirm("노트를 삭제할까요?");
 
