--- a/html/write.html
+++ b/html/write.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Petit Note</title>
     <link rel="stylesheet" href="C:\study\my-petit-note\css\main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <div>
-        <h3>New note</h3>
+    <div class="main-content">
+        <h3 class="fw-bold main-title">New note</h3>
         <form>
             <div class="form-group">
-                <label class="label" for="title">Title</label>
-                <input class="input" type="text" id="title" maxlength="30" required>
-                <label class="label" for="content">Content</label>
-                <input class="input" type="text" id="content" required>
+                <label class="label form-label" for="title" class="form-label">Title</label>
+                <input class="input form-control form-control" type="text" id="title" maxlength="30" required>
+                <label class="label form-label" for="content" class="form-label">Content</label>
+                <input class="input form-control form-control" type="text" id="content" required>
             </div>
-            <button id="saveBtn" type="submit">Save</button>
+            <div class="button-group">
+                <button id="saveBtn" type="submit" class="btn btn-primary">Save</button>
+            </div>
         </form>
-        <button id="backBtn">Back</button>
+        <div class="button-group">
+            <button id="backBtn" class="btn btn-secondary">Back</button>
+        </div>
     </div>
     <script>
         const saveBtn = document.getElementById("saveBtn");
