--- a/html/write.html
+++ b/html/write.html
@@ -18,6 +18,9 @@
                 <input class="input form-control form-control" type="text" id="title" maxlength="30" required>
                 <label class="label form-label" for="content" class="form-label">Content</label>
                 <input class="input form-control form-control" type="text" id="content" required>
+                <label class="label form-label" for="image" class="form-label">Image</label>
+                <input class="input form-control form-control" type="file" id="image" accept="image/*" required>
+                <div id="thumbnail"></div>
             </div>
             <div class="button-group">
                 <button id="saveBtn" type="submit" class="btn btn-primary">Save</button>
@@ -32,9 +35,31 @@
         const backBtn = document.getElementById("backBtn");
         const titleInput = document.getElementById("title");
         const contentInput = document.getElementById("content");
+        const imageInput = document.getElementById("image");
+        const thumbnail = document.getElementById("thumbnail");
 
         const MAX_TITLE_LENGTH = 30;
         const MAX_CONTENT_LENGTH = 100;
+
+        function showThumbnail(event) {
+            const reader = new FileReader();
+
+            reader.onload = function(event) {
+                let img = document.createElement("img");
+                img.setAttribute("src", event.target.result);
+                img.setAttribute("id", "thumbnail");
+                img.setAttribute("class", "thumbnail");
+
+                thumbnail.appendChild(img);
+            }
+
+            reader.readAsDataURL(event.target.files[0]);
+
+        }
+    
+
+        // 이미지 업로드시 이벤트
+        imageInput.addEventListener("change", showThumbnail);
 
         // 노트를 저장한다. 
         function saveNote() {
