--- a/html/write.html
+++ b/html/write.html
@@ -41,6 +41,8 @@
         const MAX_TITLE_LENGTH = 30;
         const MAX_CONTENT_LENGTH = 100;
 
+        let imageUrl;
+
         function showThumbnail(event) {
             const reader = new FileReader();
 
@@ -51,6 +53,7 @@
                 img.setAttribute("class", "thumbnail");
 
                 thumbnail.appendChild(img);
+                imageUrl = event.target.result;
             }
 
             reader.readAsDataURL(event.target.files[0]);
@@ -87,10 +90,14 @@
                 notes = JSON.parse(localStorage.getItem("notes"));
             }
 
+            // 이미지 URL을 Base64로 인코딩한다. 
+            let encodedImageUrl = btoa(imageUrl);
+
             // 새로운 노트 객체를 만든다. 
             const note = {
                 title: title,
-                content: content
+                content: content,
+                image: encodedImageUrl
             };
 
             notes.push(note);
